_includes/manuals/1.2/5.2_compute_resources.md

Foreman supports creating and managing hosts on a number of virtualization and cloud services - referred to as "compute resources" - as well as bare metal hosts.

The capabilities vary between implementations, depending on how the compute resource provider deploys new hosts and what features are available to manage currently running hosts.  Some providers are able to support unattended installation using PXE, while others are image-based.  Some providers have graphical consoles that Foreman interfaces to, and most have power management features.  A summary of all providers and their support features is given below, and more detailed sections follow with specific notes.

<table class="table table-bordered table-condensed">
  <tr>
    <th>Provider</th>
    <th>Package</th>
    <th>Unattended installation</th>
    <th>Image-based</th>
    <th>Console</th>
    <th>Power management</th>
  </tr>
  <tr>
    <td><a href="/manuals/1.2/index.html#5.2.2EC2Notes">EC2</a></td>
    <td>foreman-compute</td>
    <td>no</td>
    <td>yes</td>
    <td>read-only</td>
    <td>yes</td>
  </tr>
  <tr>
    <td><a href="/manuals/1.2/index.html#5.2.3LibvirtNotes">Libvirt</a></td>
    <td>foreman-libvirt</td>
    <td>yes</td>
    <td>no</td>
    <td>VNC or SPICE</td>
    <td>yes</td>
  </tr>
  <tr>
    <td><a href="/manuals/1.2/index.html#5.2.4OpenStackNotes">OpenStack Nova</a></td>
    <td>foreman-compute</td>
    <td>no</td>
    <td>yes</td>
    <td>no</td>
    <td>no</td>
  </tr>
  <tr>
    <td><a href="/manuals/1.2/index.html#5.2.5oVirt/RHEVNotes">oVirt / RHEV</a></td>
    <td>foreman-ovirt</td>
    <td>yes</td>
    <td>yes</td>
    <td>VNC or SPICE</td>
    <td>yes</td>
  </tr>
  <tr>
    <td><a href="/manuals/1.2/index.html#5.2.6RackspaceNotes">Rackspace</a></td>
    <td>foreman-compute</td>
    <td>no</td>
    <td>yes</td>
    <td>no</td>
    <td>yes</td>
  </tr>
  <tr>
    <td><a href="/manuals/1.2/index.html#5.2.7VMwareNotes">VMware</a></td>
    <td>foreman-vmware</td>
    <td>yes</td>
    <td>no</td>
    <td>VNC</td>
    <td>yes</td>
  </tr>
</table>

Support for these features is aimed at being as transparent as possible, allowing the same configuration to be applied to hosts irrespective of the provider in use (compute resource or not).  The selection of compute resource is made when creating a new host and the host in Foreman's database remains associated to the VM that's created, allowing it to be managed throughout the lifetime of the host.

